--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>MeTRoIDVaNiA </title>
   <!-- build:js js/phaser.min.js -->
-  <script src="node_modules/phaser/build/phaser.min.js"></script>
+  <script src="../node_modules/phaser/build/phaser.min.js"></script>
   <!-- endbuild -->
   <!-- build:js js/main.js -->
   <script src="js/main.js"></script>
