Abstracted main JS maps ad assets to sperate files

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <title>MeTRoIDVaNiA </title>
+  <!-- build:css css/main.css -->
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <!-- endbuild -->
   <!-- build:js js/phaser.min.js -->
   <script src="../node_modules/phaser/build/phaser.min.js"></script>
   <!-- endbuild -->
-  <!-- build:js js/main.js -->
-  <script src="js/main.js"></script>
+  <!-- build:js js/assets.js -->
+  <script src="js/metroidvania/assets.js"></script>
   <!-- endbuild -->
-  <!-- build:css css/main.css -->
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <!-- build:js js/maps.js -->
+  <script src="js/metroidvania/maps.js"></script>
+  <!-- endbuild -->
+  <!-- build:js js/main.js -->
+  <script src="js/metroidvania/main.js"></script>
+  <!-- endbuild -->
+  <!-- build:js js/metroidvania.js -->
+  <script src="js/game.js"></script>
   <!-- endbuild -->
 </head>
 <body>
